welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:8: error: Unmatched closing brace '}' ignored here
 }
 ^